# Embedded_Linux

./: Bashrc_Bashscript.sh  README.md  user_bashscript
AVRAtmega32_COTS/: .cproject  .project  APP.c  APP.h  BitMath.h  DelayFunc.c  main.c  output.hex  output.map
AVRAtmega32_COTS/HAL/: LED.c  LED.h  LED_CONFIG.c  LED_CONFIG.h  SSD.c  SSD.h  SSD_CONFIG.c  SSD_CONFIG.h  STD.h  SWITCH.c  SWITCH.h  SWITCH_CONFIG.c  SWITCH_CONFIG.h
AVRAtmega32_COTS/MCAL/: DIO.c  DIO.h  DIO_CONFIG.c  DIO_CONFIG.h  MCU_Registers.h  PORT.c  PORT.h  PORT_CONFIG.c  PORT_CONFIG.h
AdminLinux_Task1/: first_bash_Script.sh
AdminLinux_Task2/: BinarySearchAlgo.c  binarysearch
AutoBuildTools/YOCTO/YOCTO_RaspberryPiImage/: README.md
Calculator/: add.c
Calculator/include/: division.h  sub.h
Cmake/CalculatorProjectUsingCmake/: README.md
Cmake/CalculatorProjectUsingCmake/Calculator/: CMakeLists.txt  division.c  main.c  mult.c  sub.c
Cmake/CalculatorProjectUsingCmake/Calculator/include/: add.h  mult.h
DynamicLibrary_Lab/: operations
DynamicLibrary_Lab/Include/: addition.h  division.h
DynamicLibrary_Lab/Lib/: division.c
Exam_1/: ExamBashScript.sh
ManualDistroCreation/: README.md
ManualDistroCreation/1-Cross_toolng/: README.md
ManualDistroCreation/4-U_boot_DTB_usingTFTP/: README.md
ManualDistroCreation/5-KernelZimage_Creation/: README.md
ManualDistroCreation/6-GenerateBinaryfilesUsingBusyBoxforRootfs/: README.md
StaticLibraryVsDynamicLibrary/: README.md
staticLibrary_lab/: main.c
staticLibrary_lab/Include/: multiplication.h
staticLibrary_lab/Lib/: modulus.c
(+37 files in other folders)
